fix(DataCard): dataCard alignment styles for dataCardList

--- a/src/components/organisms/DataCardList/DataCardList.scss
+++ b/src/components/organisms/DataCardList/DataCardList.scss
@@ -5,13 +5,4 @@
         margin-top: var(--guit-ref-spacing-xlarge);
         text-align: center;
     }
-
-    &__item {
-        margin: 1rem;
-        max-height: 28.8rem;
-    }
-
-    &__virtualizedList {
-        padding: 0 1rem;
-    }
 }
